[package]
name = "promptmarket"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/promptmarket.rs"

[dependencies.multiversx-sc]
version = "0.50.4"

[dev-dependencies]
num-bigint = "0.4.4"
bitflags = "2.5.0"
hex-literal = "0.4.1"

[dev-dependencies.multiversx-sc-scenario]
version = "0.50.4"

[workspace]
members = [
    ".",
    "meta",
]
